--- a/package.json
+++ b/package.json
@@ -38,12 +38,12 @@
     "build:all": "wsrun --stages build",
     "lint": "wsrun --exclude-missing -e lint",
     "postinstall": "husky install",
+    "release": "release-it",
     "syncpack:check": "yarn syncpack list-mismatches",
     "syncpack:fix": "yarn syncpack fix-mismatches",
     "syncpack:format": "yarn syncpack format",
     "test": "wsrun --exclude-missing -e test",
-    "typecheck": "wsrun --exclude-missing typecheck",
-    "release": "release-it"
+    "typecheck": "wsrun --exclude-missing typecheck"
   },
   "workspaces": [
     "sdk",
