--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -105,7 +105,8 @@ jobs:
           tmp=$(mktemp)
           jq '.version = "${{steps.version.outputs.NEXT_VERSION}}"' ./sdk/package.json > "$tmp" && mv "$tmp" ./sdk/package.json
           
-      - if: contains(github.event.inputs.release_type, 'release')
+      - name: Commit package.json with new version
+        if: contains(github.event.inputs.release_type, 'release')
         uses: stefanzweifel/git-auto-commit-action@v4
         with:
           commit_message: Updated Changelog to version ${{steps.version.outputs.NEXT_VERSION}}
@@ -126,4 +127,4 @@ jobs:
 
       - name: Release
         if: contains(github.event.inputs.release_type, 'release')
-        run: yarn release ${{github.event.inputs.upgrade_type}} --ci $( ${{ github.event.inputs.dry_run }} && echo "--dry-run" || echo "")
+        run: yarn release --ci --no-increment --no-npm $( ${{ github.event.inputs.dry_run }} && echo "--dry-run" || echo "")
