--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -123,6 +123,11 @@ jobs:
         if: contains(github.event.inputs.release_type, 'release')
         run: npm config set //registry.npmjs.org/:_authToken ${{ secrets.PLATFORM_SA_NPM_TOKEN }}
 
+      - name: git config
+        run: |
+          git config user.name "${GITHUB_ACTOR}"
+          git config user.email "${GITHUB_ACTOR}@users.noreply.github.com"
+
       - name: Release
         if: contains(github.event.inputs.release_type, 'release')
         run: yarn release --ci --no-increment --no-npm $( ${{ github.event.inputs.dry_run }} && echo "--dry-run" || echo "") --github.tokenRef=${{ secrets.PLATFORM_SA_GITHUB_TOKEN }}
