port over dumb routing logic and tests

--- a/packages/internal/dex/tsconfig.json
+++ b/packages/internal/dex/tsconfig.json
@@ -3,7 +3,7 @@
     "baseUrl": "./src",
     "outDir": "./dist",
     "rootDirs": ["src"],
-    "target": "es5",
+    "target": "esnext",
     "module": "esnext",
     "moduleResolution": "node",
     "lib": [
