--- a/packages/economy/playground/package.json
+++ b/packages/economy/playground/package.json
@@ -1,14 +1,7 @@
 {
   "name": "@imtbl/economy-playground",
-  "version": "0.0.1",
   "description": "Playground application for Immutable Economy SDK",
-  "source": "index.html",
-  "scripts": {
-    "start": "npm run clean && parcel src/index.html -p 4200",
-    "build": "npm run clean && parcel build src/index.html --public-url ./",
-    "clean": "rimraf ./dist ./.cache"
-  },
-  "license": "MIT",
+  "version": "0.0.1",
   "dependencies": {
     "@imtbl/economy": "0.0.1"
   },
@@ -23,5 +16,12 @@
   },
   "engines": {
     "node": ">=16"
-  }
+  },
+  "license": "MIT",
+  "scripts": {
+    "build": "npm run clean && parcel build src/index.html --public-url ./",
+    "clean": "rimraf ./dist ./.cache",
+    "start": "npm run clean && parcel src/index.html -p 4200"
+  },
+  "source": "index.html"
 }
