--- a/packages/internal/dex/package.json
+++ b/packages/internal/dex/package.json
@@ -4,18 +4,6 @@
   "version": "0.0.0",
   "author": "Immutable",
   "bugs": "https://github.com/immutable/ts-immutable-sdk/issues",
-  "homepage": "https://github.com/immutable/ts-immutable-sdk#readme",
-  "keywords": [
-    "immutablex"
-  ],
-  "license": "Apache-2.0",
-  "main": "dist/main.js",
-  "module": "dist/module.js",
-  "private": true,
-  "repository": "immutable/ts-immutable-sdk.git",
-  "source": "src/index.ts",
-  "type": "module",
-  "types": "dist/types.d.ts",
   "dependencies": {
     "@uniswap/router-sdk": "^1.4.0",
     "@uniswap/swap-router-contracts": "^1.3.0",
@@ -37,13 +25,25 @@
     "typechain": "^8.1.1",
     "typescript": "^4.9.5"
   },
-  "scripts": {
-    "test": "jest test",
-    "test:watch": "jest --watch",
-    "lint": "eslint ./src --ext .ts --max-warnings=0",
-    "lint:fix": "cd ../../../ && yarn wsrun -p @imtbl/dex-sdk -c lint --fix"
-  },
   "engines": {
     "node": ">=16.0.0"
-  }
+  },
+  "homepage": "https://github.com/immutable/ts-immutable-sdk#readme",
+  "keywords": [
+    "immutablex"
+  ],
+  "license": "Apache-2.0",
+  "main": "dist/main.js",
+  "module": "dist/module.js",
+  "private": true,
+  "repository": "immutable/ts-immutable-sdk.git",
+  "scripts": {
+    "lint": "eslint ./src --ext .ts --max-warnings=0",
+    "lint:fix": "cd ../../../ && yarn wsrun -p @imtbl/dex-sdk -c lint --fix",
+    "test": "jest test",
+    "test:watch": "jest --watch"
+  },
+  "source": "src/index.ts",
+  "type": "module",
+  "types": "dist/types.d.ts"
 }
