--- a/packages/internal/dex/package.json
+++ b/packages/internal/dex/package.json
@@ -25,11 +25,14 @@
     "ethers": "^5.7.2"
   },
   "devDependencies": {
+    "@ethereum-waffle/mock-contract": "^4.0.4",
+    "@ethereum-waffle/provider": "^4.0.5",
     "@swc/core": "^1.3.36",
     "@swc/jest": "^0.2.24",
     "@typechain/ethers-v5": "^10.2.0",
     "@types/jest": "^29.4.3",
     "@types/node": "^18.14.2",
+    "eth-testing": "^1.14.0",
     "jest": "^29.4.3",
     "jest-environment-jsdom": "^29.4.3",
     "rollup": "^3.17.2",
