--- a/packages/internal/dex/package.json
+++ b/packages/internal/dex/package.json
@@ -15,7 +15,7 @@
   "repository": "immutable/ts-immutable-sdk.git",
   "source": "src/index.ts",
   "type": "module",
-  "types": "dist/types.d.ts",
+  "types": "dist/index.d.ts",
   "dependencies": {
     "@uniswap/router-sdk": "^1.4.0",
     "@uniswap/swap-router-contracts": "^1.3.0",
@@ -25,6 +25,9 @@
     "ethers": "^5.7.2"
   },
   "devDependencies": {
+    "@rollup/plugin-commonjs": "^24.0.1",
+    "@rollup/plugin-json": "^6.0.0",
+    "@rollup/plugin-node-resolve": "^15.0.2",
     "@swc/core": "^1.3.36",
     "@swc/jest": "^0.2.24",
     "@typechain/ethers-v5": "^10.2.0",
@@ -38,6 +41,7 @@
     "typescript": "^4.9.5"
   },
   "scripts": {
+    "build": "NODE_ENV=production rollup --config rollup.config.js",
     "test": "jest test",
     "test:watch": "jest --watch",
     "lint": "eslint ./src --ext .ts --max-warnings=0",
