--- a/packages/internal/dex/package.json
+++ b/packages/internal/dex/package.json
@@ -33,6 +33,7 @@
     "@types/jest": "^29.4.3",
     "@types/node": "^18.14.2",
     "eth-testing": "^1.14.0",
+    "ethereum-abi-types-generator": "^1.3.2",
     "jest": "^29.4.3",
     "jest-environment-jsdom": "^29.4.3",
     "rollup": "^3.17.2",
@@ -45,7 +46,7 @@
     "test:watch": "jest --watch",
     "lint": "eslint ./src --ext .ts --max-warnings=0",
     "lint:fix": "cd ../../../ && yarn wsrun -p @imtbl/dex-sdk -c lint --fix",
-    "generate-types": "typechain --target ethers-v5 --out-dir ./src/contracts/types ./src/contracts/ABIs/*.json"
+    "generate-types": "typechain --target ethers-v5 --discriminate-types --out-dir ./src/contracts/types ./src/contracts/ABIs/*.json"
   },
   "engines": {
     "node": ">=16.0.0"
