--- a/packages/internal/dex/package.json
+++ b/packages/internal/dex/package.json
@@ -42,7 +42,7 @@
     "test:watch": "jest --watch",
     "lint": "eslint ./src --ext .ts --max-warnings=0",
     "lint:fix": "cd ../../../ && yarn wsrun -p @imtbl/dex-sdk -c lint --fix",
-    "generate-types": "typechain --target ethers-v5 --discriminate-types --out-dir ./src/contracts/types ./src/contracts/ABIs/*.json"
+    "generate-types": "typechain --target ethers-v5 --out-dir ./src/contracts/types ./src/contracts/ABIs/*.json"
   },
   "engines": {
     "node": ">=16.0.0"
