--- a/packages/economy/sdk/package.json
+++ b/packages/economy/sdk/package.json
@@ -1,8 +1,11 @@
 {
   "name": "@imtbl/economy",
   "description": "Economy module for Immutable SDK",
-  "version": "0.0.1",
+  "version": "0.0.0",
   "dependencies": {
+    "@imtbl/checkout-sdk-web": "0.0.0",
+    "@imtbl/checkout-ui-types": "0.0.0",
+    "@imtbl/checkout-widgets": "0.0.0",
     "@swc/helpers": "~0.5.0",
     "@typescript-eslint/eslint-plugin": "^5.57.1",
     "@typescript-eslint/parser": "^5.57.1",
@@ -20,7 +23,8 @@
     "prettier": "^2.8.7",
     "rollup": "^3.17.2",
     "ts-node": "^10.9.1",
-    "typescript": "^4.9.5"
+    "typescript": "^4.9.5",
+    "wsrun": "^5.2.4"
   },
   "engines": {
     "node": ">=16"
@@ -31,6 +35,7 @@
   "main": "dist/index.js",
   "scripts": {
     "build": "NODE_ENV=production rollup --config rollup.config.js",
+    "build:all": "wsrun -p @imtbl/economy --stages build",
     "lint": "eslint ./src --ext .ts,.jsx,.tsx --max-warnings=0",
     "test": "jest",
     "test:watch": "jest --watch",
