--- a/packages/economy/services/tsconfig.json
+++ b/packages/economy/services/tsconfig.json
@@ -8,7 +8,7 @@
     "strictNullChecks": true,
     "strictFunctionTypes": true,
     "alwaysStrict": true,
-
+    "resolveJsonModule": true,
     "noUnusedLocals": true,
     "noImplicitReturns": true,
     "moduleResolution": "node",
