--- a/packages/internal/dex/package.json
+++ b/packages/internal/dex/package.json
@@ -4,18 +4,6 @@
   "version": "0.0.0",
   "author": "Immutable",
   "bugs": "https://github.com/immutable/ts-immutable-sdk/issues",
-  "homepage": "https://github.com/immutable/ts-immutable-sdk#readme",
-  "keywords": [
-    "immutablex"
-  ],
-  "license": "Apache-2.0",
-  "main": "dist/main.js",
-  "module": "dist/module.js",
-  "private": true,
-  "repository": "immutable/ts-immutable-sdk.git",
-  "source": "src/index.ts",
-  "type": "module",
-  "types": "dist/types.d.ts",
   "dependencies": {
     "@uniswap/router-sdk": "^1.4.0",
     "@uniswap/swap-router-contracts": "^1.3.0",
@@ -40,6 +28,18 @@
     "typechain": "^8.1.1",
     "typescript": "^4.9.5"
   },
+  "engines": {
+    "node": ">=16.0.0"
+  },
+  "homepage": "https://github.com/immutable/ts-immutable-sdk#readme",
+  "keywords": [
+    "immutablex"
+  ],
+  "license": "Apache-2.0",
+  "main": "dist/main.js",
+  "module": "dist/module.js",
+  "private": true,
+  "repository": "immutable/ts-immutable-sdk.git",
   "scripts": {
     "generate-types": "typechain --target ethers-v5 --out-dir ./src/contracts/types ./src/contracts/ABIs/*.json",
     "lint": "eslint ./src --ext .ts --max-warnings=0",
@@ -47,7 +47,7 @@
     "test": "jest test",
     "test:watch": "jest --watch"
   },
-  "engines": {
-    "node": ">=16.0.0"
-  }
+  "source": "src/index.ts",
+  "type": "module",
+  "types": "dist/types.d.ts"
 }
