--- a/packages/provider/package.json
+++ b/packages/provider/package.json
@@ -5,7 +5,7 @@
   "author": "Immutable",
   "bugs": "https://github.com/immutable/ts-immutable-sdk/issues",
   "dependencies": {
-    "@imtbl/core-sdk": "^1.0.2-alpha.5",
+    "@imtbl/core-sdk": "^1.1.0",
     "@magic-ext/oidc": "^1.0.1",
     "@metamask/detect-provider": "^2.0.0",
     "axios": "^1.3.5",
