--- a/packages/economy/sdk/package.json
+++ b/packages/economy/sdk/package.json
@@ -35,6 +35,7 @@
   "main": "dist/index.js",
   "scripts": {
     "build": "NODE_ENV=production rollup --config rollup.config.js",
+    "dev": "npm run build -- --watch",
     "build:all": "wsrun -p @imtbl/economy --stages build",
     "lint": "eslint ./src --ext .ts,.jsx,.tsx --max-warnings=0",
     "test": "jest",
