--- a/packages/economy/sdk/package.json
+++ b/packages/economy/sdk/package.json
@@ -20,6 +20,7 @@
     "eslint": "^8.37.0",
     "jest": "^29.4.3",
     "jest-environment-jsdom": "^29.4.3",
+    "openapi-typescript": "^5.0.0",
     "prettier": "^2.8.7",
     "rollup": "^3.17.2",
     "ts-node": "^10.9.1",
@@ -39,7 +40,8 @@
     "lint": "eslint ./src --ext .ts,.jsx,.tsx --max-warnings=0",
     "test": "jest",
     "test:watch": "jest --watch",
-    "typecheck": "tsc --noEmit --jsx preserve"
+    "typecheck": "tsc --noEmit --jsx preserve",
+    "codegen": "npx openapi-typescript https://api.games.immutable.com/inventory/swagger/doc.json --output types/inventory.d.ts && npx openapi-typescript https://api.games.immutable.com/recipe/swagger/doc.json --output types/recipe.d.ts && npx openapi-typescript https://e609qotq4d.execute-api.us-east-2.amazonaws.com/sandbox/item-definition/swagger/doc.json --output types/item-definition.d.ts && npx openapi-typescript https://e609qotq4d.execute-api.us-east-2.amazonaws.com/sandbox/crafting/swagger/doc.json --output types/crafting.d.ts"
   },
   "type": "module",
   "types": "dist/index.d.ts"
