--- a/packages/starkex/package.json
+++ b/packages/starkex/package.json
@@ -32,8 +32,8 @@
   "scripts": {
     "build": "NODE_ENV=production rollup --config rollup.config.js",
     "lint": "eslint ./src --ext .ts,.jsx,.tsx --max-warnings=0",
-    "typecheck": "tsc --noEmit --jsx preserve",
-    "test": "jest"
+    "test": "jest",
+    "typecheck": "tsc --noEmit --jsx preserve"
   },
   "type": "module",
   "types": "dist/index.d.ts"
