--- a/sdk/package.json
+++ b/sdk/package.json
@@ -11,6 +11,7 @@
     "@imtbl/core-sdk": "^1.1.1-alpha.1",
     "@magic-ext/oidc": "^1.0.1",
     "@metamask/detect-provider": "^2.0.0",
+    "@rollup/plugin-replace": "^5.0.2",
     "@swc/helpers": "~0.5.0",
     "@typescript-eslint/eslint-plugin": "^5.57.1",
     "@typescript-eslint/parser": "^5.57.1",
