--- a/sdk/package.json
+++ b/sdk/package.json
@@ -20,22 +20,30 @@
     "@uniswap/v3-periphery": "^1.4.3",
     "@uniswap/v3-sdk": "^3.9.0",
     "axios": "^1.3.5",
+    "compression": "^1.7.4",
+    "dotenv": "^16.0.3",
     "eslint": "^8.37.0",
     "ethers": "^5.7.2",
+    "express": "^4.17.1",
+    "express-formidable": "^1.2.0",
+    "helmet": "^4.2.0",
     "magic-sdk": "^13.3.1",
     "oidc-client-ts": "^2.2.1",
+    "pino": "^8.11.0",
+    "pino-http": "^8.3.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.10.0",
-    "rxjs": "^7.8.0"
+    "rxjs": "^7.8.0",
+    "tsc-watch": "^6.0.0"
   },
   "devDependencies": {
     "@imtbl/checkout-sdk-web": "0.0.0",
     "@imtbl/checkout-ui-types": "0.0.0",
     "@imtbl/config": "0.0.0",
+    "@imtbl/imx": "0.0.0",
     "@imtbl/passport": "0.0.0",
     "@imtbl/provider": "0.0.0",
-    "@imtbl/starkex": "0.0.0",
     "@rollup/plugin-commonjs": "^24.0.1",
     "@rollup/plugin-json": "^6.0.0",
     "@rollup/plugin-node-resolve": "^15.0.2",
@@ -57,9 +65,9 @@
       "types": "./dist/base.d.ts",
       "import": "./dist/base.js"
     },
-    "./starkex": {
-      "types": "./dist/starkex.d.ts",
-      "import": "./dist/starkex.js"
+    "./imx": {
+      "types": "./dist/imx.d.ts",
+      "import": "./dist/imx.js"
     },
     "./passport": {
       "types": "./dist/passport.d.ts",
