--- a/packages/starkex/package.json
+++ b/packages/starkex/package.json
@@ -5,12 +5,16 @@
   "author": "Immutable",
   "bugs": "https://github.com/immutable/ts-immutable-sdk/issues",
   "dependencies": {
-    "@imtbl/core-sdk": "^1.1.0"
+    "@imtbl/core-sdk": "^1.1.1-alpha.1"
   },
   "devDependencies": {
     "@imtbl/config": "0.0.0",
     "@rollup/plugin-typescript": "^11.0.0",
+    "@swc/jest": "^0.2.24",
+    "@types/jest": "^29.4.3",
     "eslint": "^8.37.0",
+    "jest": "^29.4.3",
+    "jest-environment-jsdom": "^29.4.3",
     "rollup": "^3.17.2",
     "typescript": "^4.9.5"
   },
@@ -28,6 +32,7 @@
   "scripts": {
     "build": "NODE_ENV=production rollup --config rollup.config.js",
     "lint": "eslint ./src --ext .ts,.jsx,.tsx --max-warnings=0",
+    "test": "jest",
     "typecheck": "tsc --noEmit --jsx preserve"
   },
   "type": "module",
