--- a/packages/imx/package.json
+++ b/packages/imx/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@imtbl/imx",
-  "description": "IMX Client for Immutable SDK",
+  "description": "ImmutableX Client for Immutable SDK",
   "version": "0.0.0",
   "author": "Immutable",
   "bugs": "https://github.com/immutable/ts-immutable-sdk/issues",
