--- a/packages/config/tsconfig.json
+++ b/packages/config/tsconfig.json
@@ -3,7 +3,7 @@
     "baseUrl": "./src",
     "outDir": "./dist",
     "rootDirs": ["src"],
-    "target": "esnext",
+    "target": "es2022",
     "module": "esnext",
     "moduleResolution": "node",
     "noEmit": true,
@@ -18,5 +18,5 @@
     "skipLibCheck": true
   },
   "include": ["src"],
-  "exclude": ["node_modules", "dist",]
+  "exclude": ["node_modules", "dist"]
 }
