--- a/packages/starkex/tsconfig.json
+++ b/packages/starkex/tsconfig.json
@@ -3,7 +3,7 @@
     "baseUrl": "./src",
     "outDir": "./dist",
     "rootDirs": ["src"],
-    "target": "esnext",
+    "target": "es2022",
     "module": "esnext",
     "moduleResolution": "node",
     "noEmit": true,
