move sdk inside of a folder

--- a/packages/internal/dex/sdk/package.json
+++ b/packages/internal/dex/sdk/package.json
@@ -35,19 +35,23 @@
   "keywords": [
     "immutablex"
   ],
+  "files": [
+    "dist"
+  ],
   "license": "Apache-2.0",
-  "main": "dist/main.js",
   "module": "dist/module.js",
   "private": true,
   "repository": "immutable/ts-immutable-sdk.git",
   "scripts": {
+    "build": "NODE_ENV=production rollup --config rollup.config.js",
     "generate-types": "typechain --target ethers-v5 --out-dir ./src/contracts/types ./src/contracts/ABIs/*.json",
     "lint": "eslint ./src --ext .ts --max-warnings=0",
-    "lint:fix": "cd ../../../ && yarn wsrun -p @imtbl/dex-sdk -c lint --fix",
+    "lint:fix": "cd ../../../.. && yarn wsrun -p @imtbl/dex-sdk -c lint --fix",
     "test": "jest test",
     "test:watch": "jest --watch"
   },
+  "main": "dist/index.js",
   "source": "src/index.ts",
-  "type": "module",
-  "types": "dist/types.d.ts"
+  "types": "dist/types/index.d.ts",
+  "type": "module"
 }
