--- a/package.json
+++ b/package.json
@@ -53,7 +53,8 @@
     "packages/passport",
     "packages/provider",
     "packages/internal/toolkit",
-    "packages/internal/dex",
+    "packages/internal/dex/sdk",
+    "packages/internal/dex/sdk-sample-app",
     "packages/checkout/sdk",
     "packages/checkout/sdk-sample-app",
     "packages/checkout/widgets",
