--- a/packages/internal/dex/sdk/package.json
+++ b/packages/internal/dex/sdk/package.json
@@ -6,16 +6,13 @@
   "bugs": "https://github.com/immutable/ts-immutable-sdk/issues",
   "dependencies": {
     "@uniswap/router-sdk": "^1.4.0",
-    "@uniswap/swap-router-contracts": "^1.3.0",
-    "@uniswap/v3-core": "^1.0.1",
-    "@uniswap/v3-periphery": "^1.4.3",
+    "@uniswap/sdk-core": "^3.0.1",
     "@uniswap/v3-sdk": "^3.9.0",
-    "ethers": "^5.7.2"
+    "ethers": "^5.7.2",
+    "jsbi": "^3.1.4"
   },
   "devDependencies": {
-    "@rollup/plugin-commonjs": "^24.0.1",
     "@rollup/plugin-json": "^6.0.0",
-    "@rollup/plugin-node-resolve": "^15.0.2",
     "@swc/core": "^1.3.36",
     "@swc/jest": "^0.2.24",
     "@typechain/ethers-v5": "^10.2.0",
@@ -53,5 +50,5 @@
   },
   "source": "src/index.ts",
   "type": "module",
-  "types": "dist/types/index.d.ts"
+  "types": "dist/index.d.ts"
 }
