--- a/sdk/package.json
+++ b/sdk/package.json
@@ -5,38 +5,17 @@
   "author": "Immutable",
   "bugs": "https://github.com/immutable/ts-immutable-sdk/issues",
   "dependencies": {
-    "@biom3/design-tokens": "0.1.4-beta",
-    "@biom3/react": "^0.2.9-beta",
     "@ethersproject/providers": "^5.7.2",
     "@imtbl/core-sdk": "^1.1.1-alpha.1",
     "@magic-ext/oidc": "^1.0.1",
     "@metamask/detect-provider": "^2.0.0",
-    "@rollup/plugin-replace": "^5.0.2",
-    "@swc/helpers": "~0.5.0",
-    "@typescript-eslint/eslint-plugin": "^5.57.1",
-    "@typescript-eslint/parser": "^5.57.1",
-    "@uniswap/router-sdk": "^1.4.0",
-    "@uniswap/swap-router-contracts": "^1.3.0",
-    "@uniswap/v3-core": "^1.0.1",
-    "@uniswap/v3-periphery": "^1.4.3",
-    "@uniswap/v3-sdk": "^3.9.0",
     "axios": "^1.3.5",
-    "compression": "^1.7.4",
-    "dotenv": "^16.0.3",
     "eslint": "^8.37.0",
     "ethers": "^5.7.2",
-    "express": "^4.17.1",
-    "express-formidable": "^1.2.0",
-    "helmet": "^4.2.0",
     "magic-sdk": "^13.3.1",
     "oidc-client-ts": "^2.2.1",
-    "pino": "^8.11.0",
-    "pino-http": "^8.3.3",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-router-dom": "^6.10.0",
-    "rxjs": "^7.8.0",
-    "tsc-watch": "^6.0.0"
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "@imtbl/checkout-sdk-web": "0.0.0",
