--- a/sdk/package.json
+++ b/sdk/package.json
@@ -9,6 +9,7 @@
     "@imtbl/core-sdk": "^1.1.1-alpha.1",
     "@magic-ext/oidc": "^1.0.1",
     "@metamask/detect-provider": "^2.0.0",
+    "@rollup/plugin-replace": "^5.0.2",
     "axios": "^1.3.5",
     "eslint": "^8.37.0",
     "ethers": "^5.7.2",
