--- a/sdk/package.json
+++ b/sdk/package.json
@@ -6,17 +6,16 @@
   "bugs": "https://github.com/immutable/ts-immutable-sdk/issues",
   "dependencies": {
     "@ethersproject/providers": "^5.7.2",
+    "@metamask/detect-provider": "^2.0.0",
+    "ethers": "^5.7.2",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "@imtbl/core-sdk": "^1.1.1-alpha.1",
     "@magic-ext/oidc": "^1.0.1",
-    "@metamask/detect-provider": "^2.0.0",
-    "@rollup/plugin-replace": "^5.0.2",
     "axios": "^1.3.5",
     "eslint": "^8.37.0",
-    "ethers": "^5.7.2",
     "magic-sdk": "^13.3.1",
-    "oidc-client-ts": "^2.2.1",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "oidc-client-ts": "^2.2.1"
   },
   "devDependencies": {
     "@imtbl/checkout-sdk-web": "0.0.0",
