[NO-CHANGELOG][DX-2044] Replace StarkEx references with IMX (#169)

--- a/package.json
+++ b/package.json
@@ -49,7 +49,7 @@
   "workspaces": [
     "sdk",
     "packages/config",
-    "packages/starkex",
+    "packages/immutablex_client",
     "packages/passport",
     "packages/provider",
     "packages/internal/toolkit",
