--- a/sdk/package.json
+++ b/sdk/package.json
@@ -42,9 +42,9 @@
     "@imtbl/checkout-sdk-web": "0.0.0",
     "@imtbl/checkout-ui-types": "0.0.0",
     "@imtbl/config": "0.0.0",
+    "@imtbl/immutablex-client": "0.0.0",
     "@imtbl/passport": "0.0.0",
     "@imtbl/provider": "0.0.0",
-    "@imtbl/starkex": "0.0.0",
     "@rollup/plugin-commonjs": "^24.0.1",
     "@rollup/plugin-json": "^6.0.0",
     "@rollup/plugin-node-resolve": "^15.0.2",
@@ -66,9 +66,9 @@
       "types": "./dist/base.d.ts",
       "import": "./dist/base.js"
     },
-    "./starkex": {
-      "types": "./dist/starkex.d.ts",
-      "import": "./dist/starkex.js"
+    "./immutablex_client": {
+      "types": "./dist/immutablex_client.d.ts",
+      "import": "./dist/immutablex_client.js"
     },
     "./passport": {
       "types": "./dist/passport.d.ts",
