re-add missing dependency

--- a/sdk/package.json
+++ b/sdk/package.json
@@ -27,6 +27,7 @@
     "@rollup/plugin-commonjs": "^24.0.1",
     "@rollup/plugin-json": "^6.0.0",
     "@rollup/plugin-node-resolve": "^15.0.2",
+    "@rollup/plugin-replace": "^5.0.2",
     "@rollup/plugin-typescript": "^11.0.0",
     "@yarnpkg/cli": "3.5.0",
     "@yarnpkg/core": "3.5.0",
