--- a/packages/internal/toolkit/package.json
+++ b/packages/internal/toolkit/package.json
@@ -11,6 +11,7 @@
     "axios": "^1.3.5",
     "eslint": "^8.37.0",
     "ethers": "^5.7.2",
+    "lodash": "^4.17.21",
     "magic-sdk": "^13.3.1",
     "oidc-client-ts": "^2.2.1"
   },
