--- a/sdk/package.json
+++ b/sdk/package.json
@@ -6,24 +6,25 @@
   "bugs": "https://github.com/immutable/ts-immutable-sdk/issues",
   "dependencies": {
     "@ethersproject/providers": "^5.7.2",
-    "@metamask/detect-provider": "^2.0.0",
-    "ethers": "^5.7.2",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
     "@imtbl/core-sdk": "^1.1.1-alpha.1",
     "@magic-ext/oidc": "^1.0.1",
+    "@metamask/detect-provider": "^2.0.0",
     "axios": "^1.3.5",
     "eslint": "^8.37.0",
+    "ethers": "^5.7.2",
+    "lodash": "^4.17.21",
     "magic-sdk": "^13.3.1",
-    "oidc-client-ts": "^2.2.1"
+    "oidc-client-ts": "^2.2.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "@imtbl/checkout-sdk-web": "0.0.0",
     "@imtbl/checkout-ui-types": "0.0.0",
     "@imtbl/config": "0.0.0",
     "@imtbl/immutablex-client": "0.0.0",
-    "@imtbl/passport": "0.0.0",
     "@imtbl/provider": "0.0.0",
+    "@imtbl/passport": "0.0.0",
     "@rollup/plugin-commonjs": "^24.0.1",
     "@rollup/plugin-json": "^6.0.0",
     "@rollup/plugin-node-resolve": "^15.0.2",
