--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -32,6 +32,10 @@ jobs:
     name: Publish Workflow
     runs-on: ubuntu-latest
     steps:
+      - name: Check Public Release Branch
+        if: contains(github.event.inputs.release_type, 'release') && (github.ref != 'refs/heads/main')
+        run: failure("Public releases should be only done from main branch, current branch ${{ github.ref }}")
+
       - name: Checkout
         uses: actions/checkout@v3
         with:
