--- a/packages/economy/sdk/package.json
+++ b/packages/economy/sdk/package.json
@@ -22,6 +22,7 @@
     "jest-environment-jsdom": "^29.4.3",
     "prettier": "^2.8.7",
     "rollup": "^3.17.2",
+    "swagger-typescript-api": "^12.0.4",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.5",
     "wsrun": "^5.2.4"
