--- a/package.json
+++ b/package.json
@@ -55,6 +55,8 @@
     "packages/internal/toolkit",
     "packages/internal/dex/sdk",
     "packages/internal/dex/sdk-sample-app",
+    "packages/internal/bridge/sdk",
+    "packages/internal/bridge/sdk-sample-app",
     "packages/checkout/sdk",
     "packages/checkout/sdk-sample-app",
     "packages/checkout/widgets",
